fixed landing header...
issue:
menu is not responsive.

--- a/client/src/components/landing/styles.module.scss
+++ b/client/src/components/landing/styles.module.scss
@@ -86,7 +86,8 @@
     img {
         opacity: 0.5;
         width: 100dvw;
-        height: auto;
+        height: 70dvh;
+        object-fit: cover;
     }
 }
 
